--- a/app/globals.css
+++ b/app/globals.css
@@ -182,3 +182,13 @@
 .scrollable::-webkit-scrollbar-button {
   display: none; /* Removes up/down arrows */
 }
+
+/* Autocomplete 배경색 변경 방지 */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-text-fill-color: var(--foreground);
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
