style : grid layout 및 스크롤 커스텀 스타일 구현

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,36 +151,34 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
 }
 
 /* Custom scrollbar for elements with .scrollable class */
 .scrollable::-webkit-scrollbar {
-  display: block;
-  width: 8px;
-  border: var(--aiortho-gray-300) solid 1px;
-}
-
-.scrollable::-webkit-scrollbar-track {
-  background: var(--aiortho-gray-100);
-  background-color: var(--aiortho-gray-400);
+  width: 4px;
 }
 
 .scrollable::-webkit-scrollbar-thumb {
   background: var(--aiortho-gray-400);
+  border-radius: 12px; /* 스크롤바 둥근 테두리 */
 }
 
-.scrollable::-webkit-scrollbar-thumb:hover {
-  background: var(--aiortho-gray-400);
-}
-
-.scrollable {
-  -ms-overflow-style: auto; /* IE and Edge */
-  scrollbar-width: thin; /* Firefox */
-}
 .scrollable::-webkit-scrollbar-button {
   display: none; /* Removes up/down arrows */
+}
+
+.scrollable::-webkit-scrollbar-button:vertical:start:decrement,
+.scrollable::-webkit-scrollbar-button:vertical:start:increment {
+  display: block;
+  height: 6px;
+}
+
+.scrollable::-webkit-scrollbar-button:vertical:end:decrement,
+.scrollable::-webkit-scrollbar-button:vertical:end:increment {
+  display: block;
+  height: 6px;
 }
 
 /* Autocomplete 배경색 변경 방지 */
